# study-cpp-generic

./: .gitignore  CMakeLists.txt  README.md
src/: hello.cpp  hello.h  x_allocator.hpp  x_data.cpp  x_data.h
tests/: CMakeLists.txt  allocator_test.cpp  find_test.cpp  foreach_test.cpp  function_object_test.cpp  main_test.cpp  operator_new_test.cpp  right_val_test.cpp  swap_test.cpp  transform_test.cpp
